test/unit/components/dialogue/scripts/invalid-syntax/linear-simple-disconnect-converge.dscript
Bob angry M
I am angry right now.

CONVERGE FIGHT
